--- a/appstylesheet.css
+++ b/appstylesheet.css
@@ -2229,7 +2229,7 @@ p {
     padding-top: 40px;
     padding-bottom: 450px;
     background-color: #bfbfbf;
-    background-image: url(""), url("");
+    background-image: url(""), url("https://jamespeterjacob.github.io/app/capp1.svg");
     background-position: 0% 0%, 50% 50%;
     background-size: auto, cover;
     background-repeat: repeat, no-repeat;
